# py_terminal

./: .dockerignore  DISTRIBUTION_GUIDE.md  Dockerfile  README.md  build_executable.py  homebrew-formula.rb  info.md  pyproject.toml  setup.py
.github/workflows/: release.yml
chocolatey/: py-terminal.nuspec
chocolatey/tools/: chocolateyinstall.ps1
snap/: snapcraft.yaml
terminal_web/: main.py
web_app/: app.py
web_app/templates/: index.html
